# embedded-rust-book-examples

./: README.md
getting-started-hardware/: Cargo.toml  memory.x  openocd.cfg
getting-started-hardware/examples/: hello.rs
getting-started-memory-mapped-registers/: Cargo.toml  memory.x
getting-started-memory-mapped-registers/examples/: hello.rs
getting-started-memory-mapped-registers/src/: main.rs
getting-started/exceptions/: Cargo.toml
getting-started/exceptions/src/: main.rs
getting-started/hardware/: Cargo.toml  memory.x
getting-started/hardware/.cargo/: config.toml
getting-started/hardware/src/: main.rs
getting-started/memory-mapped-registers/: Cargo.toml
getting-started/memory-mapped-registers/examples/: hal-example.rs  hal-led-on.rs
getting-started/panicking/: Cargo.toml
getting-started/panicking/src/: main.rs
getting-started/qemu/: Cargo.toml
getting-started/semihosting/: Cargo.toml
getting-started/semihosting/src/: main.rs
src/: main.rs
