[package]
authors = ["ziedmasmoudi <zied.masmoudi2001@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "getting-started-memory-mapped-registers"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401"]

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "getting-started-memory-mapped-registers"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
